# dbt-bq-dry-runner

./: README.md  pyproject.toml
dbt_bq_dry_runner/: dry_run.py  hooks.py
